addons/k8s-ldap/ingress-ssl/loginapp-deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: loginapp
  namespace: auth
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: loginapp
    spec:
      containers:
      - image: docker.io/dreamoid/dex_loginapp:2.4
        name: loginapp
        command: ["/loginapp", "serve", "/app/config.yaml"]
        ports:
        - name: http
          containerPort: 5555
        volumeMounts:
        - name: ca
          mountPath: /etc/ssl/
        - name: config
          mountPath: /app/
        #- name: tls
        #  mountPath: /etc/loginapp/tls
      volumes:
      - name: ca
        configMap:
          name: ca
          items:
          - key: ca.pem
            path: ca.pem
      - name: config
        configMap:
          name: loginapp
          items:
          - key: config.yaml
            path: config.yaml
      #- name: tls
      #  secret:
      #    secretName: login.furiouscat.com.tls
