addons/k8s-ldap/ingress-ssl/loginapp-ing-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: loginapp
  namespace: auth
spec:
  #type: NodePort
  ports:
  - name: loginapp
    port: 5555
    protocol: TCP
    targetPort: 5555
    #nodePort: 32002
  selector:
    app: loginapp


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: loginapp
  namespace: auth
  annotations:
    kubernetes.io/ingress.class: nginx
    #kubernetes.io/tls-acme: 'true'
    ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  rules:
    - host: login.furiouscat.com
      http:
        paths:
          - backend:
              serviceName: loginapp
              servicePort: 5555
            path: /
  tls:
    - hosts:
        - login.furiouscat.com
      secretName: login.furiouscat.com.tls
